Fix tool failure when no params present